<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_stock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="a15008377.opsc7312assign1_15008377.StockActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_stock_id"
                android:text="@string/label_stock_id"
                style="@style/TextStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_stock_id"
                android:layout_below="@id/label_stock_id"
                style="@style/TextStyle"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_stock_description"
                android:layout_below="@+id/text_stock_id"
                android:text="@string/label_stock_description"
                style="@style/TextStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_stock_description"
                android:id="@+id/text_stock_description"
                style="@style/TextStyle"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_stock_quantity"
                android:layout_below="@+id/text_stock_description"
                android:text="@string/label_stock_quantity"
                style="@style/TextStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_stock_quantity"
                android:id="@+id/text_stock_quantity"
                android:inputType="number"
                style="@style/TextStyle"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_add_stock"
                android:layout_below="@+id/text_stock_quantity"
                android:text="@string/button_add_stock"
                style="@style/PrimaryButtonStyle"
                android:onClick="addStockOnClick"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
