<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_delivery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="a15008377.opsc7312assign1_15008377.DeliveryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="26dp"
        android:fadeScrollbars="false">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_delivery_id"
                android:text="@string/label_delivery_id"
                style="@style/TextStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_delivery_id"
                android:layout_below="@id/label_delivery_id"
                style="@style/TextStyle"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_delivery_client"
                android:layout_below="@+id/text_delivery_id"
                android:text="@string/label_delivery_client"
                style="@style/TextStyle"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_delivery_client"
                android:layout_below="@+id/label_delivery_client"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="@style/Widget.AppCompat.Spinner.DropDown"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_delivery_date"
                android:layout_below="@+id/spinner_delivery_client"
                android:text="@string/label_delivery_date"
                style="@style/TextStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_delivery_date"
                android:layout_toRightOf="@+id/label_delivery_date"
                android:layout_below="@id/spinner_delivery_client"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                style="@style/TextStyle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose Date"
                android:onClick="chooseDateOnClick"
                android:layout_below="@+id/label_delivery_date"
                android:id="@+id/button_choose_date"
                style="@style/SecondaryButtonStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_delivery_items"
                    android:text="@string/label_delivery_items"
                    style="@style/TextStyle"
                    android:layout_below="@+id/button_choose_date"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_delivery_items"
                    android:layout_below="@+id/label_delivery_items"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/Widget.AppCompat.Spinner.DropDown"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_delivery_item_quantity"
                    android:text="@string/label_delivery_item_quantity"
                    style="@style/TextStyle"
                    android:layout_below="@id/spinner_delivery_items"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_delivery_item_quantity"
                    android:layout_below="@id/label_delivery_item_quantity"
                    style="@style/TextStyle"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:inputType="number"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_add_delivery_item"
                    android:text="@string/button_add_delivery_item"
                    android:layout_below="@+id/text_delivery_item_quantity"
                    android:onClick="addDeliveryItemOnClick"
                    style="@style/SecondaryButtonStyle"/>

            <TextView
                android:id="@+id/text_delivery_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeadingTextStyle"
                android:text="Delivery Items"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_below="@+id/button_add_delivery_item"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/list_view_delivery_items"
                android:fadeScrollbars="false"
                android:layout_below="@id/text_delivery_items"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_add_delivery"
                android:text="@string/button_add_delivery"
                android:layout_below="@+id/list_view_delivery_items"
                android:onClick="addDeliveryOnClick"
                style="@style/PrimaryButtonStyle"/>
        </RelativeLayout>
    </ScrollView>
    </LinearLayout>
